# quiz-test

./: README.md  docker-compose.yaml  pyproject.toml  test_main.http
app/: Dockerfile  Quiz.py  api_operation.py  main.py  requirements.txt
