[tool.poetry]
name = "quiz_test"
version = "0.1.0"
description = ""
authors = ["AleksandraV <am.amsti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.36"
Flask = "^2.1.2"
requests = "^2.27.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
